k8s/workatrack-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workatrack-api            # Nombre del Deployment
  labels:
    app: workatrack               # Etiqueta común para agrupar recursos
spec:
  replicas: 1                     # De momento 1 réplica es suficiente
  selector:
    matchLabels:
      app: workatrack             # Debe coincidir con los labels del template
  template:
    metadata:
      labels:
        app: workatrack           # Etiquetas que heredará el Pod
    spec:
      containers:
        - name: workatrack
          image: workatrack:latest      # Imagen que usaremos en Minikube
          imagePullPolicy: Never        # Usamos la imagen local de Minikube
          ports:
            - containerPort: 5000       # Puerto donde escucha Flask en el contenedor
