k8s/workatrack-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workatrack-api
  labels:
    app: workatrack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: workatrack
  template:
    metadata:
      labels:
        app: workatrack
    spec:
      containers:
        - name: workatrack
          image: workatrack:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: workatrack-service
spec:
  type: ClusterIP
  selector:
    app: workatrack
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
