k8s/workatrack-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: workatrack-service          # Nombre del Service
  labels:
    app: workatrack
spec:
  type: ClusterIP                    # Solo accesible dentro del clúster (luego usaremos Ingress)
  selector:
    app: workatrack                  # Debe coincidir con los labels del Deployment
  ports:
    - name: http
      port: 80                       # Puerto "lógico" del Service
      targetPort: 5000               # Puerto del contenedor Flask
