k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: workatrack-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: workatrack.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: workatrack-service
                port:
                  number: 80

          - path: /
            pathType: Prefix
            backend:
              service:
                name: workatrack-frontend-service
                port:
                  number: 80
